# SmartDuka

./: .gitignore  LICENSE  README.md  docker-compose.yml  package.json  render.yaml  vercel.json
backend/: .env  .env.example  Dockerfile  README.md  pyproject.toml
backend/pytest_tmp/: test_application_creates_feathcurrent  test_checkout_blocks_a_basket_current  test_complete_gameplay_loop_ancurrent  test_gameplay_rejects_next_cuscurrent  test_openapi_and_validation_ercurrent  test_restock_records_an_expenscurrent  test_startup_upgrades_a_legacycurrent  test_stock_decision_persists_bcurrent
backend/pytest_tmp/tmp/: test_application_creates_feathcurrent  test_authenticated_shopkeeper_current  test_bearer_session_keeps_a_decurrent  test_checkout_blocks_a_basket_current  test_complete_gameplay_loop_ancurrent  test_gameplay_rejects_next_cuscurrent  test_openapi_and_validation_ercurrent  test_restock_records_an_expenscurrent  test_shopkeeper_can_register_rcurrent  test_sign_in_rejects_invalid_ccurrent  test_startup_upgrades_a_legacycurrent  test_stock_decision_persists_bcurrent
backend/scripts/: run_agent_loop.py
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py
backend/src/contracts/: __init__.py  auth.py  common.py  demo.py  errors.py  gameplay.py  health.py  (+3 more)
backend/tests/: test_adaptive_difficulty.py  test_agent_behaviors.py  test_agent_framework.py  test_ai_orchestrator.py  test_ai_runtime.py  test_auth.py  test_database_config.py  test_demo_gameplay.py  test_demo_readiness.py  test_gameplay_engine.py  test_health.py  test_openai_provider.py
(+170 files in other folders)
