[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smartduka-backend"
version = "0.1.0"
description = "Smart Duka FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20,<1.0",
  "asyncpg>=0.30,<1.0",
  "fastapi>=0.115,<1.0",
  "openai>=1.0,<2.0",
  "pydantic-settings>=2.7,<3.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pre-commit>=4.1,<5.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
  "ruff>=0.9,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
